[build-system]
requires = [
    "setuptools>=69",
    "setuptools-scm[toml]>=8",
    "numpy>=2.0",
    "Cython>=3",
    "eigency>=2.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "GeneralTmm"
description = "General 4x4 transfer-matrix method (TMM)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ardi Loot", email = "ardi.loot@outlook.com" },
]
dynamic = ["version"]
dependencies = [
    "numpy>=2.0",
    "scipy",
    "eigency>=2.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
examples = ["matplotlib"]

[project.urls]
Homepage = "https://github.com/ardiloot/GeneralTmm"
Repository = "https://github.com/ardiloot/GeneralTmm"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["GeneralTmm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest", "ruff", "black", "matplotlib"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pyright]
include = ["GeneralTmm"]
exclude = ["GeneralTmm/src"]
reportAttributeAccessIssue = "warning"
reportReturnType = "warning"
reportAssignmentType = "warning"
