[build-system]
requires = [
    "setuptools>=69",
    "setuptools-scm[toml]>=8",
    "numpy>=2.0",
    "Cython>=3",
    "eigency>=2.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "GeneralTmm"
description = "General 4x4 transfer-matrix method (TMM)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ardi Loot", email = "ardi.loot@outlook.com" },
]
keywords = [
    "optics",
    "transfer-matrix",
    "thin-film",
    "photonics",
    "plasmonics",
    "anisotropic",
    "birefringence",
    "multilayer",
    "SPP",
    "TMM",
]
dynamic = ["version"]
dependencies = [
    "numpy>=2.0",
    "eigency>=2.0.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

[project.optional-dependencies]
examples = ["matplotlib"]
test = ["pytest", "scipy"]

[project.urls]
Homepage = "https://github.com/ardiloot/GeneralTmm"
Repository = "https://github.com/ardiloot/GeneralTmm"
Changelog = "https://github.com/ardiloot/GeneralTmm/releases"
"Bug Tracker" = "https://github.com/ardiloot/GeneralTmm/issues"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["GeneralTmm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest", "matplotlib", "scipy"]

[tool.setuptools.package-data]
"GeneralTmm" = ["*.pyi", "py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
include = ["GeneralTmm"]
exclude = ["GeneralTmm/src"]
reportAttributeAccessIssue = "warning"
reportReturnType = "warning"
reportAssignmentType = "warning"
